Initial CSV Loading should be final or close to final Added a structure for containing algorithims to send them into theads (if they work in a way I think they might) :)

--- a/ProcScheduler/ProcScheduler.vcxproj
+++ b/ProcScheduler/ProcScheduler.vcxproj
@@ -110,6 +110,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="csv_load.cpp" />
+    <ClCompile Include="driver.cpp" />
+    <ClCompile Include="proc_algorithim.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="csv_load.h" />
+    <ClInclude Include="proc_algorithim.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ProcScheduler.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
