--- a/ProcScheduler/ProcScheduler.vcxproj.filters
+++ b/ProcScheduler/ProcScheduler.vcxproj.filters
@@ -41,4 +41,9 @@
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\CS332-104ProjectSpring2017.pdf">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
